--- a/contactus.html
+++ b/contactus.html
@@ -8,9 +8,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- Bootstrap CSS -->
     <!-- build:css css/main.css -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link href="./css/styles.css" rel="stylesheet">
     <!-- endbuild -->
     <title>Uptown Bikes | Contact us</title>
 </head>
@@ -314,7 +314,7 @@
         <div class="container">
             <a class="navbar-brand" href="./index.html"><img src="images/logo.png" height="90"></a>
             <a class="navbar-brand d-md-none" href="#" style="color:white;"><i class="fa fa-shopping-cart"
-                aria-hidden="true"></i> <span class="cart"></span></a>
+                    aria-hidden="true"></i> <span class="cart"></span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"><i class="fa fa-bars" style="color:#fff; font-size:28px;"></i></span>
             </button>
@@ -333,8 +333,8 @@
                     <li class="nav-item active"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-comments"></span>
                             CONTACT US</a></li>
-                    <li class="nav-item d-none d-md-block"><a class="nav-link" href="#"><i class="fa fa-shopping-cart fa-lg"
-                                aria-hidden="true"></i> <span class="cart"></span>
+                    <li class="nav-item d-none d-md-block"><a class="nav-link" href="#"><i
+                                class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i> <span class="cart"></span>
                         </a></li>
                 </ul>
             </div>
@@ -414,7 +414,8 @@
                     <div class="form-group row">
                         <label for="emailid" class="col-md-3 col-form-label required">Email</label>
                         <div class="col-md-9">
-                            <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email" required>
+                            <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email"
+                                required>
                         </div>
                     </div>
 
@@ -505,11 +506,17 @@
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <!-- build:js js/main.js -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/tether/dist/js/tether.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.7/js/tether.min.js"
+        integrity="sha512-X7kCKQJMwapt5FCOl2+ilyuHJp+6ISxFTVrx+nkrhgplZozodT9taV2GuGHxBgKKpOJZ4je77OuPooJg9FJLvw=="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.3/umd/popper.min.js"
+        integrity="sha512-53CQcu9ciJDlqhK7UD8dZZ+TF2PFGZrOngEYM/8qucuQba+a+BXOIRsp9PoMNJI3ZeLMVNIxIfZLbG/CdHI5PA=="
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="./js/scripts.js"></script>
     <!-- endbuild -->
 </body>
 
