--- a/aboutus.html
+++ b/aboutus.html
@@ -8,9 +8,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- Bootstrap CSS -->
     <!-- build:css css/main.css -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link href="./css/styles.css" rel="stylesheet">
     <!-- endbuild -->
     <title>Uptown Bikes | About us</title>
 </head>
@@ -395,9 +395,11 @@
                     target="_blank">NYSE</a>).</p>
             <p class="col-12">Quarterly earnings reports:</p>
             <ul>
-                <li><i style="color:red;" class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="#">Uptown Bikes Q2 - July 2020.pdf</a>
+                <li><i style="color:red;" class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="#">Uptown Bikes Q2 -
+                        July 2020.pdf</a>
                 </li>
-                <li><i style="color:red;" class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="#">Uptown Bikes Q1 - April 2020.pdf</a>
+                <li><i style="color:red;" class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="#">Uptown Bikes Q1 -
+                        April 2020.pdf</a>
                 </li>
             </ul>
 
@@ -483,11 +485,17 @@
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <!-- build:js js/main.js -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/tether/dist/js/tether.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.7/js/tether.min.js"
+        integrity="sha512-X7kCKQJMwapt5FCOl2+ilyuHJp+6ISxFTVrx+nkrhgplZozodT9taV2GuGHxBgKKpOJZ4je77OuPooJg9FJLvw=="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.3/umd/popper.min.js"
+        integrity="sha512-53CQcu9ciJDlqhK7UD8dZZ+TF2PFGZrOngEYM/8qucuQba+a+BXOIRsp9PoMNJI3ZeLMVNIxIfZLbG/CdHI5PA=="
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="./js/scripts.js"></script>
     <!-- endbuild -->
     <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
 </body>
